--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,21 @@
 <manifest package="com.appdev.schoudhary.wittylife"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".app.WittyLife"
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".MainActivity"  android:windowSoftInputMode="stateAlwaysHidden" android:launchMode="singleTop">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -23,13 +30,21 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
 
-        <provider android:name=".SuggestionProvider"
-                  android:authorities="com.appdev.schoudhary.wittylife.SuggestionProvider" />
+        <provider
+            android:name=".SuggestionProvider"
+            android:authorities="com.appdev.schoudhary.wittylife.SuggestionProvider"/>
+
+        <activity android:name=".ui.main.DetailsActivity" android:parentActivityName=".ui.main.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.main.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
