Adding ranking and comparison activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,10 +48,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.main.MainActivity"/>
         </activity>
-        <activity android:name=".ui.main.RankingActivity">
+        <activity android:name=".ui.main.RankingActivity"
+                  android:parentActivityName=".ui.main.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.main.MainActivity"/>
+
         </activity>
         <activity android:name=".ui.main.ComparisonActivity"
-                  android:parentActivityName=".ui.main.DetailsActivity">
+                  android:parentActivityName=".ui.main.DetailsActivity"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.main.DetailsActivity"/>
