--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,8 @@
         </activity>
         <activity android:name=".ui.main.MPActivity">
         </activity>
+        <activity android:name=".ui.main.StackBarActivity">
+        </activity>
     </application>
 
 </manifest>
