--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,6 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
 
 }
