--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,20 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -84,5 +100,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
+
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 
 }
