Adding proguard and fabric integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,20 +28,29 @@ android {
     }
     buildTypes {
         debug {
+            debuggable true
+            minifyEnabled true
+            shrinkResources true
             buildConfigField 'String', "ApiKey", Numbeo_ApiKey
             resValue 'string', "api_key", Numbeo_ApiKey
             buildConfigField 'String', "UnsplashApiKey", Unsplash_ApiKey
             resValue 'string', "unsplash_api_key", Unsplash_ApiKey
-            Unsplash_ApiKey
+            buildConfigField 'String', "FabricApiKey", Fabric_ApiKey
+            resValue 'string', "fabric_api_key", Fabric_ApiKey
+
         }
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             buildConfigField 'String', "ApiKey", Numbeo_ApiKey
             resValue 'string', "api_key", Numbeo_ApiKey
             buildConfigField 'String', "UnsplashApiKey", Unsplash_ApiKey
             resValue 'string', "unsplash_api_key", Unsplash_ApiKey
+            buildConfigField 'String', "FabricApiKey", Fabric_ApiKey
+            resValue 'string', "fabric_api_key", Fabric_ApiKey
         }
     }
     compileOptions {
