--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 *.iml
-.gradle
-/local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.gradle/
+local.properties
+build/
+captures/
 .idea/
+app/fabric.properties
+*.log
+*.dex
+
