--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:name=".app.WittyLife"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
-        android:icon="@mipmap/ic_wittylife"
+        android:icon="@mipmap/ic_witty"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_witty_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -93,9 +93,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/wittylife_update_widget_info"/>
         </receiver>
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="47b73cf891217ea967201f70d03dd7264594391e" />
     </application>
 
 </manifest>
