--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ repositories {
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'upload'
+            keyPassword 'capstone'
+            storeFile file('/Users/schoudhary/Development/WittyLife/app/keystores')
+            storePassword 'capstone'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.appdev.schoudhary.wittylife"
@@ -29,37 +37,34 @@ android {
     buildTypes {
         debug {
             debuggable true
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
             buildConfigField 'String', "ApiKey", Numbeo_ApiKey
             resValue 'string', "api_key", Numbeo_ApiKey
             buildConfigField 'String', "UnsplashApiKey", Unsplash_ApiKey
             resValue 'string', "unsplash_api_key", Unsplash_ApiKey
             buildConfigField 'String', "FabricApiKey", Fabric_ApiKey
             resValue 'string', "fabric_api_key", Fabric_ApiKey
-
         }
         release {
             debuggable false
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
             buildConfigField 'String', "ApiKey", Numbeo_ApiKey
             resValue 'string', "api_key", Numbeo_ApiKey
             buildConfigField 'String', "UnsplashApiKey", Unsplash_ApiKey
             resValue 'string', "unsplash_api_key", Unsplash_ApiKey
             buildConfigField 'String', "FabricApiKey", Fabric_ApiKey
             resValue 'string', "fabric_api_key", Fabric_ApiKey
+            signingConfig signingConfigs.config
         }
     }
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
-
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
@@ -73,50 +78,36 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
-
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
     def lifecycle_version = "1.1.1"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
-
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
-
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
-
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
-
     implementation 'com.google.firebase:firebase-core:16.0.8'
-
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
-
     def lottieVersion = "2.7.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
 }
