--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     signingConfigs {
         config {
             Properties properties = new Properties()
-            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+            properties.load(project.rootProject.file('data.properties').newDataInputStream())
             storeFile file(properties.getProperty('storeFile'))
             keyAlias properties.getProperty('keyAlias')
             storePassword properties.getProperty('storePassword')
