--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <application
         android:name=".app.WittyLife"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_witty"
         android:label="@string/app_name"
